--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@
                 <div class="cartao__conteudo__resposta">
                 O Java Script é uma linguagem de programação.
                 </div>
-                <article class="cartao">
+            </article>
+        </section>
+        <article class="cartao">
+            <div class="cartao__conteudo">
+             <h3> Programação </h3>
+            <div class="cartao__conteudo__pergunta">
+            O que é CSS?
+            </div>                        
+            <div class="cartao__conteudo__resposta">
+            O CSS é uma linguagem de estilização.
+            </div>
+            </div>
+            </article>
+            <article class="cartao">
                 <div class="cartao__conteudo">
                  <h3> Programação </h3>
                 <div class="cartao__conteudo__pergunta">
@@ -28,10 +41,7 @@
                 O CSS é uma linguagem de estilização.
                 </div>
                 </div>
-                </article>
-                </div>
-            </article>
-        </section>
+                </article>  
     </main>
     <footer>
         <p>Projeto desenvolvido pela Alura, sem fins lucrativos.</p>
